_assets/stylesheets/modules/header.scss
nav {
  $delay: .2s;
  $letter-width: 54px;
  $offset: 80%; 
  
  position: fixed;
  z-index: 3;
  top: 0;
  width: calc(100% - #{$letter-width});
  
  @media #{$large-up} {
    width: auto;
  }
  
  .nav-logo-container {
    position: absolute;
    height: $letter-width;
    z-index: 3;
    > * {
      display: inline-block;
      width: $letter-width;
      height: $letter-width;
      mix-blend-mode: multiply;
      
      &:hover {
        text-decoration: none;
      }
    }
    
    .nav-logo-letter {
      &-first {        
        background: url(asset_path("images/f_letter.png"));
        background-size: cover;
      }      
      
      &-second {
        position: absolute;
        top: $offset;
        left: 0%;
        background: url(asset_path("images/i_letter.png"));
        background-size: cover;
        transition: left $delay, top $delay ease-in-out $delay;
      }
    }    
  } 
  
  .selected {
    color: $green;
  }
  
  > ul {
    position: relative;
    left: $letter-width;
    z-index: 0;
    width: 100%;
    height: $letter-width;
    display: flex;
    align-items: center;
    justify-content: space-around;
    background: $dark-gray;
    transition: left $delay ease-in-out $delay, width $delay;
    border-bottom: solid 1px white;
    overflow: hidden;
    
    @media #{$large-up} {
      display: inline-block;
      border-right: solid 1px white;
    }    
    
    > li {
      overflow: hidden;
      text-align: center;
      display: inline-block;
      transition: opacity $delay ease-in-out calc(2 * #{$delay}), width $delay ease-in-out $delay;
      font-size: calc(0.3 * #{$letter-width});
      height: calc(0.3 * #{$letter-width});
      margin: calc(0.35 * #{$letter-width}) 0;

      @media #{$large-up} {
        width: 100px;
      }
    }
    
    &.sub-menu-active {
      > li {
        opacity: 0;
        width: 0;
        transition: opacity $delay, width $delay ease-in-out $delay;
        &.active {
          transition: width $delay ease-in-out $delay;
          width: 100px;
          opacity: 1;
          // 
          // > ul {
          //   width: auto;
          // }
        }
      }
    }
  }
  
  
  ul.sub-menu {
    position: absolute;
    display: inline-block;
    overflow: hidden;
    width: auto;
    margin-left: 20px;
    visibility: hidden;
    opacity: 0;
    transition: visibility $delay ease-in-out 0s,
                opacity $delay ease-in-out 0s;
    
    li {
      width: 100px;
      text-align: center;
      display: inline-block;
    }
    
    &.active {
      visibility: visible;
      opacity: 1;
      transition: visibility $delay ease-in-out calc(2 * #{$delay}),
                  opacity $delay ease-in-out calc(2 * #{$delay});
                  
      .nav-menu-item-text {
        width: 0;
        opacity: 0;
      }
    }
  }
  
  &.hidden {
    
    @media #{$large-up} {
      > ul {
        left: -100%;
        transition: left $delay;
      }
      
      .nav-logo-letter {
        &-second {
          top: 0%;
          left: $offset;
          transition: top $delay, left $delay ease-in-out $delay;
        }
      }
    }
  }
  
  
  .nav-hover-container {
    position: absolute;
    display: inline-block;
    top: 0%;
    width: calc(110% + #{$letter-width});
    height: 300%;
  }
}

header {
  position: relative;
  -webkit-user-select: none;
}

